styles/IndexNav.module.scss
@import url('https://fonts.googleapis.com/css2?family=Sulphur+Point&display=swap');

.fixed {
    position: fixed;
}

.navbar {
    z-index: 999;
    background:#FAFAFA;
    margin: 0;
    height: 80px;
    width: 100%;
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
    // position: fixed;

    .container {
        // display: flex;
        position: relative;
        z-index: 999;
        // position: fixed;

    }


    .navItems {
        background: linear-gradient(90.46deg, #52E9C5 2.3%, #CFFCF1 99.6%);
        // height: calc(100vh - 80px);
        height: 100vh;
        display: grid;
        position: fixed;
        width: 100%;
        // overflow: hidden;
    }



    h1 {
        // border: 1px solid black;
        margin: 0;
        color: black;
        font-family: 'Sulphur Point', sans-serif;
        font-size: 3rem;
        width: 150px;
        height: 80px;
        padding: 0;
        padding-left: 10px;
        padding-top: 20px;

        // margin-right: auto;
    }

    ul {
        margin: 0;
        padding: 0;
        list-style: none;
        text-align: center;
        font-size: 3em;
        color: #CFFCF1;
        
        // margin-bottom: auto;

        li {
            margin: 0;
            padding: .5em;
        }

        .current {
            font-weight: bold;
        }
    }



    .menuBtn {
        position: absolute;
        top: 2em;
        right: 2em;
        cursor: pointer;
    }

    .launchBtnWrap {
        margin-bottom: 5%;
        width: auto;
        justify-self: center;
        align-self: end;
    }

    .grid {
        display: grid;
        height: calc(100vh - 80px);
    }

    .show {
        display: block;
        // background: orange;
    }

    .hide {
        display: none;
        // background: pink;
    }
}

@media screen and (min-width: 768px) {
    .navbar {
        // background: orange;
        height: 100px;
        position: unset;


        .container {
            display: grid;
            height: 100px;
            grid-template-columns: 200px calc(100vw - 200px);
        }

        .menuBtn {
            display: none;
        }

        h1 {
            font-size: 4rem;
            height: 100px;
            // border: 1px solid black;
            width: 200px;
        }

        
        .grid {
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: flex-end;
            height: 100px;
            // align-content: ;
            // height: 0;
        }
        
        ul {
            margin: 0;
            padding: 0;
            text-align: center;
            font-size: 1em;
            color: #949494;
            display: flex;
            // border: 1px solid red;
            margin-left: 3em;
            margin-bottom: .75em;
            // height: auto;
            // margin-left: 10%;

            
            li {
                margin: 0;
                padding: 0;
                margin-right: 1em;
            }
        }
        
        .navItems {
            background: none;
            display: block;
            // border: 1px solid yellow;
            height: 100px;
            position: unset;
        }
        .navList {
            display: flex;
        }

        .launchBtnWrap {
            display: block;
            // border: 1px solid black;
            margin-bottom: 1em;
            margin-right: 1em;
            width: auto;
            // height: 100px;
        }
    }
}
    

